# djku

./: AGENTS.md  README.md
audio_player_app/: pubspec.yaml
audio_player_app/android/app/: build.gradle
audio_player_app/android/app/src/main/: AndroidManifest.xml
audio_player_app/juce_module/: CMakeLists.txt
audio_player_app/juce_module/Source/: AudioEngine.cpp  AudioEngine.h
audio_player_app/lib/: juce_ffi.dart  main.dart  waveform_display_widget.dart  waveform_painter.dart
src/agents/: BeatDetectionAgent.h  BridgeAgent.h  FileManagerAgent.h  PlaybackAgent.h  RenderingAgent.h  SpectrumAgent.h  StateAgent.h  WaveformAgent.h
